log
Fri 14 Apr 2023 03:41:04 AM UTC: 
 tests:  0|6
total_score: 0/70
077bf9f
Tue 04 Jul 2023 03:43:07 AM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:12: error: unused variable ‘map’ [-Werror=unused-variable]
   56 |   HashMap* map = malloc(sizeof(HashMap));
      |            ^~~
hashmap.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f491cc3
Tue 04 Jul 2023 03:43:18 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e9f359c
Tue 04 Jul 2023 03:43:27 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:1: error: control reaches end of non-void function [-Werror=return-type]
   62 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
74e658f
Tue 04 Jul 2023 03:43:36 AM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
f5810d4
Tue 04 Jul 2023 03:48:27 AM UTC: 
 hashmap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:76:16: error: unused variable ‘index’ [-Werror=unused-variable]
   76 |   unsigned int index = hash(key, map->capacity);
      |                ^~~~~
cc1: all warnings being treated as errors
Compilation failed
50a2b72
Tue 04 Jul 2023 03:48:49 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:76:8: error: unused variable ‘index’ [-Werror=unused-variable]
   76 |   long index = hash(key, map->capacity);
      |        ^~~~~
cc1: all warnings being treated as errors
Compilation failed
54df28e
Tue 04 Jul 2023 03:50:48 AM UTC: 
 hashmap.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:70:10: error: unused variable ‘index’ [-Werror=unused-variable]
   70 |     long index = hash(key, map->capacity);
      |          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
ced42e3
Tue 04 Jul 2023 03:53:28 AM UTC: 
 hashmap.c | 41 ++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 40 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:109:10: error: unused variable ‘index’ [-Werror=unused-variable]
  109 |     long index = hash(key, map->capacity);
      |          ^~~~~
hashmap.c: At top level:
hashmap.c:119:8: error: redefinition of ‘searchMap’
  119 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
hashmap.c:67:7: note: previous definition of ‘searchMap’ with type ‘Pair *(HashMap *, char *)’ {aka ‘Pair *(struct HashMap *, char *)’}
   67 | Pair* searchMap(HashMap* map, char* key) {
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
081d5d7
Tue 04 Jul 2023 03:53:39 AM UTC: 
 hashmap.c | 33 +++++++++++++++++----------------
 1 file changed, 17 insertions(+), 16 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:13: error: implicit declaration of function ‘is_equalHash’; did you mean ‘is_equal’? [-Werror=implicit-function-declaration]
   53 |         if (is_equalHash(map->buckets[codigo]->key, key)) {
      |             ^~~~~~~~~~~~
      |             is_equal
hashmap.c:63:28: error: implicit declaration of function ‘createhashPair’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
   63 |     map->buckets[codigo] = createhashPair(key, value);
      |                            ^~~~~~~~~~~~~~
      |                            createPair
hashmap.c:63:26: error: assignment to ‘Pair *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   63 |     map->buckets[codigo] = createhashPair(key, value);
      |                          ^
hashmap.c: In function ‘eraseMap’:
hashmap.c:110:10: error: unused variable ‘index’ [-Werror=unused-variable]
  110 |     long index = hash(key, map->capacity);
      |          ^~~~~
hashmap.c: At top level:
hashmap.c:120:8: error: redefinition of ‘searchMap’
  120 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
hashmap.c:68:7: note: previous definition of ‘searchMap’ with type ‘Pair *(HashMap *, char *)’ {aka ‘Pair *(struct HashMap *, char *)’}
   68 | Pair* searchMap(HashMap* map, char* key) {
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
160f8d6
Tue 04 Jul 2023 03:57:37 AM UTC: 
 hashmap.c | 28 +++++++++++++---------------
 1 file changed, 13 insertions(+), 15 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:61:31: error: implicit declaration of function ‘createhashPair’; did you mean ‘createPair’? [-Werror=implicit-function-declaration]
   61 |     map->buckets[hash_code] = createhashPair(key, value);
      |                               ^~~~~~~~~~~~~~
      |                               createPair
hashmap.c:61:29: error: assignment to ‘Pair *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   61 |     map->buckets[hash_code] = createhashPair(key, value);
      |                             ^
hashmap.c: In function ‘eraseMap’:
hashmap.c:109:10: error: unused variable ‘index’ [-Werror=unused-variable]
  109 |     long index = hash(key, map->capacity);
      |          ^~~~~
hashmap.c: At top level:
hashmap.c:119:8: error: redefinition of ‘searchMap’
  119 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
hashmap.c:67:7: note: previous definition of ‘searchMap’ with type ‘Pair *(HashMap *, char *)’ {aka ‘Pair *(struct HashMap *, char *)’}
   67 | Pair* searchMap(HashMap* map, char* key) {
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
399bbb1
Tue 04 Jul 2023 03:59:00 AM UTC: 
 hashmap.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:109:10: error: unused variable ‘index’ [-Werror=unused-variable]
  109 |     long index = hash(key, map->capacity);
      |          ^~~~~
hashmap.c: At top level:
hashmap.c:119:8: error: redefinition of ‘searchMap’
  119 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
hashmap.c:67:7: note: previous definition of ‘searchMap’ with type ‘Pair *(HashMap *, char *)’ {aka ‘Pair *(struct HashMap *, char *)’}
   67 | Pair* searchMap(HashMap* map, char* key) {
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d57e692
Tue 04 Jul 2023 04:01:41 AM UTC: 
 hashmap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:126:10: error: unused variable ‘index’ [-Werror=unused-variable]
  126 |     long index = hash(key, map->capacity);
      |          ^~~~~
hashmap.c: At top level:
hashmap.c:136:8: error: redefinition of ‘searchMap’
  136 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
hashmap.c:67:7: note: previous definition of ‘searchMap’ with type ‘Pair *(HashMap *, char *)’ {aka ‘Pair *(struct HashMap *, char *)’}
   67 | Pair* searchMap(HashMap* map, char* key) {
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
29e2ca8
Tue 04 Jul 2023 04:03:41 AM UTC: 
 hashmap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:126:10: error: unused variable ‘index’ [-Werror=unused-variable]
  126 |     long index = hash(key, map->capacity);
      |          ^~~~~
hashmap.c: At top level:
hashmap.c:136:8: error: redefinition of ‘searchMap’
  136 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
hashmap.c:67:7: note: previous definition of ‘searchMap’ with type ‘Pair *(HashMap *, char *)’ {aka ‘Pair *(struct HashMap *, char *)’}
   67 | Pair* searchMap(HashMap* map, char* key) {
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b82b416
Tue 04 Jul 2023 04:04:07 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c:135:8: error: redefinition of ‘searchMap’
  135 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
hashmap.c:67:7: note: previous definition of ‘searchMap’ with type ‘Pair *(HashMap *, char *)’ {aka ‘Pair *(struct HashMap *, char *)’}
   67 | Pair* searchMap(HashMap* map, char* key) {
      |       ^~~~~~~~~
Compilation failed
7844ab3
Tue 04 Jul 2023 04:04:21 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  12|1
total_score: 60/70
efe504d
Tue 04 Jul 2023 04:06:17 AM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  12|1
total_score: 60/70
eaf2a76
